Update favicon path to /images/favicon.svg

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campsite Icons</title>
     <meta name="description" content="A collection of beautifully crafted icons for your next project">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="stylesheet" href="styles/cover.css">
     <style>
         * {
